# MealPlanner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml
src/: data.json  install.py  main.py  settings.py
src/db/: 01_meals.sql  04_mealplan.sql  __init__.py  db.py  mealhistory.sql  mealplan.sql  meals.sql  seed_data.sql  seed_meals.json  setup.py  sidedishes.sql
src/db/core/: connection.py
src/db/migrations/: 01_meals.sql  02_sidedishes.sql  03_mealhistory.sql  05_apikeystore.sql
src/db/models/: __init__.py
src/db/repositories/: __init__.py  meal.py  meal_history.py  side_dish.py
src/db/seeds/: seed_sidedishes.json
src/lib/: ai.py  backup.py  logger.py  prompts.py
src/lib/ai/: __init__.py  prompts.py
src/models/: logs.py  meals.py  plan.py
src/routes/: __init__.py  backup.py  logs.py  meals.py
