[project]
name = "meal-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "loguru>=0.7.3",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.3.6",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "uvicorn>=0.35.0",
]
